chore: tidy warnings